// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/admin_user_card/admin_user_card should match default snapshot 1`] = `
<div>
  <div
    class="AdminUserCard"
    data-testid="adminUserCard"
  >
    <div
      class="AdminUserCard__header"
      data-testid="adminUserCardHeader"
    >
      <div
        data-testid="adminUserCardProfileImage"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="status-wrapper style--none admin-user-card"
          style="border-radius: 50%; width: 128px; height: 128px;"
        >
          <span
            class="profile-icon "
            data-testid="profileIcon"
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </button>
      </div>
      <div
        class="AdminUserCard__user-info"
      >
        <span
          data-testid="adminUserCardDisplayName"
        >
          Jim
           
          Halpert
        </span>
        <span>
           • 
        </span>
        <span
          class="AdminUserCard__user-nickname"
          data-testid="adminUserCardNickname"
        >
          Big Tuna
        </span>
      </div>
      <div
        class="AdminUserCard__user-id"
        data-testid="adminUserCardUserId"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
      data-testid="adminUserCardBody"
    />
    <div
      class="AdminUserCard__footer"
      data-testid="adminUserCardFooter"
    />
  </div>
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no first/last name is defined 1`] = `
<div>
  <div
    class="AdminUserCard"
    data-testid="adminUserCard"
  >
    <div
      class="AdminUserCard__header"
      data-testid="adminUserCardHeader"
    >
      <div
        data-testid="adminUserCardProfileImage"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="status-wrapper style--none admin-user-card"
          style="border-radius: 50%; width: 128px; height: 128px;"
        >
          <span
            class="profile-icon "
            data-testid="profileIcon"
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </button>
      </div>
      <div
        class="AdminUserCard__user-info"
      >
        <span
          data-testid="adminUserCardDisplayName"
        >
           
        </span>
        <span
          class="AdminUserCard__user-nickname"
          data-testid="adminUserCardNickname"
        >
          Big Tuna
        </span>
      </div>
      <div
        class="AdminUserCard__user-id"
        data-testid="adminUserCardUserId"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
      data-testid="adminUserCardBody"
    />
    <div
      class="AdminUserCard__footer"
      data-testid="adminUserCardFooter"
    />
  </div>
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no first/last name or nickname is defined 1`] = `
<div>
  <div
    class="AdminUserCard"
    data-testid="adminUserCard"
  >
    <div
      class="AdminUserCard__header"
      data-testid="adminUserCardHeader"
    >
      <div
        data-testid="adminUserCardProfileImage"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="status-wrapper style--none admin-user-card"
          style="border-radius: 50%; width: 128px; height: 128px;"
        >
          <span
            class="profile-icon "
            data-testid="profileIcon"
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </button>
      </div>
      <div
        class="AdminUserCard__user-info"
      >
        <span
          data-testid="adminUserCardDisplayName"
        >
           
        </span>
        <span
          class="AdminUserCard__user-nickname"
          data-testid="adminUserCardNickname"
        />
      </div>
      <div
        class="AdminUserCard__user-id"
        data-testid="adminUserCardUserId"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
      data-testid="adminUserCardBody"
    />
    <div
      class="AdminUserCard__footer"
      data-testid="adminUserCardFooter"
    />
  </div>
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no nickname is defined 1`] = `
<div>
  <div
    class="AdminUserCard"
    data-testid="adminUserCard"
  >
    <div
      class="AdminUserCard__header"
      data-testid="adminUserCardHeader"
    >
      <div
        data-testid="adminUserCardProfileImage"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="status-wrapper style--none admin-user-card"
          style="border-radius: 50%; width: 128px; height: 128px;"
        >
          <span
            class="profile-icon "
            data-testid="profileIcon"
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </button>
      </div>
      <div
        class="AdminUserCard__user-info"
      >
        <span
          data-testid="adminUserCardDisplayName"
        >
          Jim
           
          Halpert
        </span>
        <span
          class="AdminUserCard__user-nickname"
          data-testid="adminUserCardNickname"
        />
      </div>
      <div
        class="AdminUserCard__user-id"
        data-testid="adminUserCardUserId"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
      data-testid="adminUserCardBody"
    />
    <div
      class="AdminUserCard__footer"
      data-testid="adminUserCardFooter"
    />
  </div>
</div>
`;
